# openhealthos

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/core/: models.py
